@@ -43,7 +43,6 @@ seats=seat-0
 #
 # Seat configuration
 #
-# vt = Virtual terminal to start on (0-n)
 # greeter-theme = Greeter theme
 # greeter-user = User to run greeter process as
 # session = Default session
@@ -57,7 +56,6 @@ seats=seat-0
 # key = Authentication key to use
 #
 [seat-0]
-#vt=0
 #greeter-theme=example-gtk-gnome
 #greeter-user=lightdm
 #session=gnome
