@@ -2,8 +2,10 @@ Overview of changes in lightdm 0.4.2
 
     * Fix errors communicating with PAM
     * Fix interaction with Plytmouth.
-    * Removes the vt=active option in lightdm.conf, this is no longer required
-      and the active VT is used if no VT is specified and LightDM is detected
+    * Removes the vt option in lightdm.conf, this is no longer required
+      and the active is used for the first display if Plymouth is
+      detected.  A new option minimum-vt is added to select the first
+      VT to be used for other displays.
 
 Overview of changes in lightdm 0.4.1
 
